# mcpctl

./: .gitignore  Cargo.toml  README.md  cortex.toml  justfile
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  main.rs  output.rs  session.rs
src/commands/: call.rs  config_cmd.rs  introspect.rs  mod.rs  prompt.rs  resource.rs  server.rs  tail.rs  tool.rs
src/config/: mod.rs  own.rs
tests/: e2e_stdio.rs
