[package]
name = "mcpctl"
version = "0.1.0"
edition = "2021"
description = "the MCP control utility for AI agents"
license = "Apache-2.0"

[[bin]]
name = "mcpctl"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
dirs = "5"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
